--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,9 @@
         <input type="text" name="domain" placeholder="example.com" required />
         <button type="submit">Fetch Jobs</button>
     </form>
+    {% if error %}
+    <p style="color: red">{{ error }}</p>
+    {% endif %}
     {% if jobs %}
     <h2>Job URLs</h2>
     <ul>
