Display GPT log and job links

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,5 +20,14 @@
         {% endfor %}
     </ul>
     {% endif %}
+    {% if logs %}
+    <h2>GPT Responses</h2>
+    <pre>
+{% for log in logs %}
+{{ log }}
+-----
+{% endfor %}
+    </pre>
+    {% endif %}
 </body>
 </html>
